--- a/Sites/Dashboard_new/public/css/blacklist.css
+++ b/Sites/Dashboard_new/public/css/blacklist.css
@@ -39,8 +39,8 @@
 }
 .alerta_processo {
     padding: 5px;
-    color: red;
-    background-color: rgb(255, 189, 189);
+    color: rgb(250, 164, 4);
+    background-color:rgb(253, 237, 147);
     width: 85%;
     font-size: 12px;
 }
@@ -83,6 +83,8 @@
 
 .tabela_blacklist th {
     font-size: 20px;
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .tabela_blacklist tr {
