--- a/software/dotControllTec/src/main/java/com/mycompany/dotcontrolltec/TelaPrincipal.form
+++ b/software/dotControllTec/src/main/java/com/mycompany/dotcontrolltec/TelaPrincipal.form
@@ -485,7 +485,7 @@
                 <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="text" type="java.lang.String" value="..."/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor Padr&#xe3;o"/>
                 </Property>
               </Properties>
             </Component>
