--- a/Sites/Dashboard_new/public/css/blacklist.css
+++ b/Sites/Dashboard_new/public/css/blacklist.css
@@ -5,6 +5,80 @@
     justify-content: center;
     align-items: center;
 }
+.bg_pop_up_alerta {
+    
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 30%;
+    z-index: 10;
+    display: none;
+}
+.div_pop_up_alerta {
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+}
+.pop_up_alerta {
+    width: 30%;
+    height: 50%;
+    background-color: #FFF;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.fechar_pop_up {
+    margin-right: 30px;
+    align-self: flex-end;
+    width: min-content;
+    font-weight: bold;
+    cursor: pointer;
+    top: 0;
+}
+
+
+.mensagem_pop_up {
+    text-align: center;
+    font-weight: bold;
+    width: 80%;
+}
+
+.div_box_btns {
+    height: 20vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.btn_pop_up_confirmar {
+    background-color: #0000ff;
+}
+
+.btn_pop_up_cancelar {
+    background-color: #9e0000;
+}
+
+.btn_pop_up {
+    cursor: pointer;
+    color: white;
+    width: 90%;
+    height: 7vh;
+    border: none;
+    font-weight: bold;
+    font-size: 18px;
+}
+
 
 .container_black_list {
     width: 70%;
@@ -60,6 +134,17 @@
     border: none;
     background-color: #2222FF;
     color: #FFF;
+}
+
+.loading_blacklist {
+    display: none; 
+    bottom: 0; 
+    height: 50px;
+    margin: 0 auto;
+}
+#loading_tabela_processos {
+    display: block;
+    height: 30vh;
 }
 
 .div_tabela_blacklist {
