--- a/Sites/Dashboard_new/public/css/header.css
+++ b/Sites/Dashboard_new/public/css/header.css
@@ -1,10 +1,5 @@
 
-.menu{
-    width: 100%;
-    height: 70px;
-    background-color: white;
-    border-bottom: rgb(206, 206, 206) 1px solid;
-}
+
 body,
 html {
     margin: 0;
@@ -18,7 +13,6 @@ input, button, img {
     outline: none;
 }
 button {
-
     transition-duration: .5s;
 }
 button:active {
@@ -26,29 +20,29 @@ button:active {
 }
 ul{
     float: left;
+    margin: 0;
+    padding: 0;
 }
-
+.menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 20px;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 70px;
+    background-color: white;
+    border-bottom: rgb(206, 206, 206) 1px solid;
+    padding: 0!important;
+}
 .menu ul li{
     list-style: none;
-    display: flex;
+    padding-top: 12px;
     display: inline-block;
-    padding: 10px;
     position: relative;
-    height: 35px;
     width: 120px;
+    height: 30px;
     text-align: center;
-}
-
-li ul{
-    position: absolute;
-    top: 50px;
-    right: 0px;
-    background-color: white;
-    padding-left: 0px;
-    text-align: center;
-    display: none;
-    min-width: 120px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 li ul li{
@@ -60,10 +54,6 @@ ul li:hover{
     background-color: rgb(238, 238, 238);
 }
 
-li:hover ul {
-    display: block;
-    
-}
 
 a{
     text-decoration: none;
@@ -74,17 +64,14 @@ a{
 #header__logo{
     width: 100px;
     float: left;
-    margin: 6px 86px 0px 28px;
     cursor: pointer;
 }
 
 #header__profile{
     font-size: 50px;
     float: right;
-    margin: 10px 23px 0px 0px;
     cursor: pointer;
-    color: grey;
-    padding: 3px;
+    color: grey;    
     margin-top: 5px;
 }
 
@@ -120,7 +107,6 @@ a{
     font-size: 100px;
     color: grey;
     margin-bottom: 15px;
-    
 }
 
 #modal__spn-nome{
