Adicionando informações da maquina a sua página e estilizando tabelas

--- a/Sites/Dashboard_new/public/css/blacklist.css
+++ b/Sites/Dashboard_new/public/css/blacklist.css
@@ -156,7 +156,11 @@
     overflow-y: scroll;
     min-width: 300px;
 }
-
+.div_tabela_blacklist h3 {
+    margin: 0 auto;
+    text-align: center;
+    text-transform: uppercase;
+}
 .tabela_blacklist {
     margin: 30px auto;
     width: 90% ;
