--- a/Sites/Dashboard_new/public/css/visaoMaquina.css
+++ b/Sites/Dashboard_new/public/css/visaoMaquina.css
@@ -142,6 +142,53 @@ html {
     display: none;
     margin: 5vh;
 }
+/* ------------------ Lista de Máquinas ------------------- */
+.container__div-lista {
+    height: min-content;
+    max-height: 80vh;
+    width: 90%;
+    background-color: white;
+    margin: 30px auto;
+    overflow-y: scroll;
+    min-width: 300px;
+    margin-bottom: 90px;
+}
+
+.div-lista__table-listaMaquinas {
+    border-collapse: collapse;
+    border-spacing: 5px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.div-lista__table-listaMaquinas th {
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 0;
+    width: 10px !important;
+}
+
+.div-lista__table-listaMaquinas td,
+.div-lista__table-listaMaquinas th {
+    padding: 8px;
+    border: 2px solid black;
+}
+
+.div-lista__table-listaMaquinas tr {
+    cursor: pointer;
+    text-align: center;
+    transition-duration: .5s;
+}
+
+.div-lista__table-listaMaquinas tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.tr-maquina:hover td {
+    transition-duration: .5s;
+    background-color: #a2c1ff;
+}
 
 
 /* ------------------------- GRÁFICOS -------------------------- */
@@ -252,53 +299,51 @@ html {
     padding-top: 50px;
 }
 
-/* ------------------ Lista de Máquinas ------------------- */
-.container__div-lista {
-    height: min-content;
-    max-height: 80vh;
-    width: 90%;
-    background-color: white;
-    margin: 30px auto;
-    overflow-y: scroll;
-    min-width: 300px;
-    margin-bottom: 90px;
+/* ------------------------- CONFIGURACAO MAQUINA -------------------------- */
+
+.container-configuracao_maquina {
+    width: 50%;
+    height: 480px;
+    display: flex;
+    border: rgb(163, 163, 163) 1px solid;
+    margin: 20px auto;
+    justify-content: center;
+    align-items: center;
+    
 }
 
-.div-lista__table-listaMaquinas {
-    border-collapse: collapse;
-    border-spacing: 5px;
-    width: 100%;
+.container-configuracao_maquina__box {
+    width: 90%;
+    height: 90%;
+    background-color: #FFF;
+    box-shadow: 0px 0px 20px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.loading_info_maquina {
+    display: none;
     margin: 0 auto;
 }
-
-.div-lista__table-listaMaquinas th {
+.container-configuracao_maquina__box h2 {
     text-align: center;
-    background-color: rgb(0, 0, 0);
-    color: white;
-    padding: 0;
-    width: 10px !important;
+    margin: 0;
+    font-size: 30px;
 }
 
-.div-lista__table-listaMaquinas td,
-.div-lista__table-listaMaquinas th {
-    padding: 8px;
-    border: 2px solid black;
+.div_lista_infomacoes_maquina {
+    width: 90%;
 }
 
-.div-lista__table-listaMaquinas tr {
-    cursor: pointer;
-    text-align: center;
-    transition-duration: .5s;
+.lista_infomacoes_maquina li {
+    list-style: none;
+    font-size: 19px;
+    margin-bottom: 10px;
 }
 
-.div-lista__table-listaMaquinas tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-.tr-maquina:hover td {
-    transition-duration: .5s;
-    background-color: #a2c1ff;
-}
+/* ------------------------- BLACK LIST -------------------------- */
 
 .container-blacklist_computador {
     width: 99%;
@@ -377,6 +422,11 @@ html {
     margin: auto auto;
     overflow-y: scroll;
     min-width: 300px;
+}
+.div_tabela_blacklist h3 {
+    margin: 0 auto;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .tabela_blacklist {
